crates/opentree-core/tests/snapshots/render_snapshots__robots_with_sitemap.snap
---
source: crates/opentree-core/tests/render_snapshots.rs
expression: render_robots(&c)
---
User-agent: *
Allow: /
Sitemap: https://example.com/sitemap.xml
