crates/opentree-core/tests/snapshots/render_snapshots__robots_without_sitemap.snap
---
source: crates/opentree-core/tests/render_snapshots.rs
expression: render_robots(&c)
---
User-agent: *
Allow: /
